css/sarah.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&family=Roboto+Slab&display=swap');
* {
  margin: 0;
  padding: 0;
  font-family: 'Roboto Slab', sans-serif;
 
}

html,
body {
  width: 100%;
  height: 100%;
  background-color: lightcyan;
}

.navbar-sa {
  background-color: transparent;
  font-family: sans-serif;
  box-shadow: black;
}

.navbar-sal a:hover {
  justify-content: right;
  text-shadow: 0 0 10px #b784a7 ;
  transition: 1s;
}

.navbar-brand {
  padding-top: 0;
  padding-bottom: 0;
  margin-top: 0;
  margin-bottom: 0;
}


.imgtop {
  background-image: url("/images/tkbooks2.png");
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  -webkit-background-size: cover;
  height: 100vh;
  width: 100vw;
}

.header-overlay {
  background-color: rgba(31, 31, 31, .75);
  height: 100%;
  max-width: 100%;
}



.header-text h1 {
  color: white;
  padding-top: 400px;
  padding-bottom: 150px;
  font-size: 65px;
  font-weight: 800;
  text-align: left;
  margin-bottom: 0;
  padding-bottom: 0;
  letter-spacing: 17px;
}

.header-text p {
  color: white;
  font-size: 25px;
  font-weight: 500;
  line-height: 100px;
  text-align: left;
  margin-top: 0;
  padding-top: 0;
  letter-spacing: 2px;
  word-spacing: 5px;
}

.img-fluid {
  max-width: 100%;
  height: auto;
  margin-top: 20px;
  border-radius: 100%;
  margin-bottom: 20px;
  border-style: solid;
  border-color: rgb(225, 230, 176);
  border-width: 10px;
}


.imgexcitinghist {
  background-image: url("/images/bb.png");
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  -webkit-background-size: cover;
  height: 25vw;
}

.header-overlay2 {
  background-color: rgba(31, 31, 31, .6);
  height: 100%;
  width: 100%;
}

.weaHistory {
  color: white;
  padding-top: 2vw;
  padding-bottom: 1vw;;
}

.h4Pres {
  color: white;
  font-style: italic;
  padding-top: 0px;
}

.Ppres {
  color: white;
  max-width: 850px;
}


#hxlist {
  list-style-type: none;
  color:  white;
  list-style-position: inside;
  text-align: right;
  font-size: 3vw;
  padding: 3;
}

.p-histo {
  color: aliceblue;
  padding-top: 20px;
}

.contact {
  background-color: cadetblue;
  padding-top: 15px;
  max-height: fit-content;

}

.conticons li {
  font-size: 30px;
  display: inline;
  padding: 20px;
}

.h1-about {
padding-top: 50px;
}

.p1about {
  padding-top: 20px;
  padding-bottom: 40px;
  line-height: 40px;
  max-width: 75%;
}

.cv {
  padding-top: 50px;
}

.curic {
  padding-top: 20px;
  padding-bottom: 50px;
}

#CURR {
  padding-bottom: 50px;
}

.contacth1 {
  padding-bottom: 0;
  padding-top: 0;
}


#nav {
  height: 30px;
  display: flex; 
  width: 100%;
  transition:  2s;
  top: 0;
  background: linear-gradient(to left, #a4b6d0, lightcyan,#ffecbc);
} 

#home {
  position: abs;
}

.nav-link,
.nav-link:active,
.nav-link:focus {
  color: aliceblue;
  text-decoration: none;
}

/* CV Sections CSS */

#cvline {
  background-color: blue;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#cvlineT {
  background-color: #ffecbc;
  height: 5px;
  width: 25%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#cvlineB {
  background-color: #ffecbc;
  height: 2px;
  width: 25%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#eduH1 {
  text-align: right;
}

.cv {
  text-align: center;
}

 .dates {
  text-align: right;
}

.degree {
  text-align: left;
}

.education  {
  list-style: none;
}

.subbul {
  list-style: none;
}

.liItem {
  padding-bottom: 10px;
  max-width: 850px;
}

.years {
  text-align: right;
}

.position {
  text-align: left;
}


.professionUL  {
  list-style: none;
}

.EducSection {
  padding-top: 25px;
}

.ProfSection {
  padding-top: 25px;
}

.FellowAwards {
  padding-top: 25px;
}

.felaward {
  text-align: left;
}

.presearch {
  text-align: left;
  max-width: 850px; 
  padding-bottom: 10px;
}

.research {
  padding-top: 25px;
}

.h5-spec {
  text-align: left;
  font-style: italic;
}

.p-spec {
  text-align: left;
  padding-bottom: 10px;
  max-width: 850px;
}

.SpecialistCourse {
  padding-top: 25px;
}

.ser-years {
  text-align: right;
}

.ServiceActiv {
  padding-top: 26px;
}

#smallbreak {
  display: none;
}

